Mapper with static methods for product create, update and response Dto mapping