@@ -4,18 +4,17 @@ package risrchanish.product.recommend.mapper;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import risrchanish.product.recommend.dto.product.ProductCreateDto;
 import risrchanish.product.recommend.dto.product.ProductResponseDto;
 import risrchanish.product.recommend.dto.product.ProductUpdateDto;
 import risrchanish.product.recommend.dto.productfeature.ProductFeatureResponseDto;
+import risrchanish.product.recommend.dto.productmetadata.ProductMetadataResponseDto;
 import risrchanish.product.recommend.dto.rating.RatingResponseDto;
 import risrchanish.product.recommend.entity.Product;
 import risrchanish.product.recommend.entity.ProductFeature;
-import risrchanish.product.recommend.entity.Rating;
-import risrchanish.product.recommend.entity.User;
-import risrchanish.product.recommend.exception.ResourceNotFoundException;
-import risrchanish.product.recommend.repository.UserRepository;
+import risrchanish.product.recommend.entity.ProductMetadata;
 
 public class ProductMapper {
 
@@ -30,19 +29,26 @@ public class ProductMapper {
 		// List<ProductFeatureCreateDto>  to   List<ProductFeature>
 		
 		List<ProductFeature> featuresList = Optional.ofNullable(dto.getFeatures()).orElse(Collections.emptyList())
+											.stream()
+											.map(featureCreateDto -> 
+											ProductFeatureMapper.toProductFeature(featureCreateDto, product))
+											.collect(Collectors.toList());
+												
+		
+		List<ProductMetadata> metadataList = Optional.ofNullable(dto.getMetadataList()).orElse(Collections.emptyList())
 												.stream()
-												.map(featureCreateDto -> ProductFeatureMapper.toDto(featureCreateDto, product))
-												.toList();
+												.map(metadataCreateDto -> 
+												ProductMetadataMapper.toProductMetadata(metadataCreateDto, product))
+												.collect(Collectors.toList());
 		
 		product.setName(dto.getName());
 		product.setCategory(dto.getCategory());
 		product.setPrice(dto.getPrice());
 		product.setInStock(dto.isInStock());
-		product.setFeatures(featuresList);                     // List<ProductFeatureCreateDto>  --->   List<ProductFeature>
-		product.setMetadata(ProductMetadataMapper.toProductMetadata(dto.getMetadata(), product)); 
-		
-		return product;
-		
+		product.setFeatures(featuresList); 
+		product.setMetadataList(metadataList);
+		// We are not setting here because it has Product to set and we will set it in service layer
+		return product;		
 		
 	}
 	
@@ -54,11 +60,20 @@ public class ProductMapper {
 		// List<ProductFeature> to List<ProductFeatureResponseDto>
 		List<ProductFeatureResponseDto>	featureDto = Optional.ofNullable(product.getFeatures()).orElse(Collections.emptyList())
 														.stream().map(feature -> ProductFeatureMapper.toFeatureResponseDto(feature))
-														.toList();
+														.collect(Collectors.toList());
 		
 		 
 		List<RatingResponseDto> ratingsList = Optional.ofNullable(product.getRatings()).orElse(Collections.emptyList())
-												.stream().map(rating -> RatingMapper.toRatingResponseDto(rating)).toList();
+												.stream().map(rating -> RatingMapper.toRatingResponseDto(rating))
+												.collect(Collectors.toList());
+		
+		
+		List<ProductMetadataResponseDto> metadataList = Optional.ofNullable(product.getMetadataList())
+											.orElse(Collections.emptyList())
+											.stream().map(metadata -> 
+											ProductMetadataMapper.toMetadataResponseDto(metadata))
+											.collect(Collectors.toList());	
+		
 		
 				ProductResponseDto dto = new ProductResponseDto(
 				
@@ -67,11 +82,10 @@ public class ProductMapper {
 					product.getPrice(),
 					product.getCategory(),
 					discountedPrice,
-					ProductMetadataMapper.toMetadataResponseDto(product.getMetadata()),
+					metadataList,
 					product.isInStock(),
 					ratingsList,
-					featureDto
-									
+					featureDto							
 				);
 		return dto;
 	}
@@ -83,9 +97,7 @@ public class ProductMapper {
 		product.setCategory(dto.getCategory());
 		product.setInStock(dto.isInStock());
 		product.setName(dto.getName());
-		product.setPrice(dto.getPrice());
-		
-		
+		product.setPrice(dto.getPrice());	
 		return product;
 		
 	}
